# shadow

./: .gitignore  Makefile  Pipfile  README.md  Shader.h  fragment.glsl  fragment3.glsl  main.cpp  meson.build  mousepos.py  opengl.py  pyproject.toml  requirements.txt  script.py  sground  show.py  test.py  utils.py  vertex.glsl
example/: expandedlife.glsl  filter.glsl  frag.glsl  frag0.glsl  frag1.glsl  frag2.glsl  frag3.glsl  gameoflife.glsl  mouse.glsl  te2.glsl  test.glsl
gui/: gui.py  test.py
screenshots/: img2.webm.mov
scripts/: cubemouse.py
shadow/: PboDownloader.py  components.py  config.py  glutils.py  listelements.py  main.py  shader.py  shadow.py  xutils.py
shadow@danielfvm.github.io/: emulateX11WindowType.js  gnomeShellOverride.js  metadata.json
show/: PboDownloader.py  __init__.py  components.py  config.py  elements.py  framelimiter.py  gui.py  main.py  opengl.py  shader.py  show.py  sources.py  utils.py
show@danielfvm.github.io/: emulateX11WindowType.js  extension.js  gnomeShellOverride.js  metadata.json
src/: arghandler.c  arghandler.h  config.py  elements.py  main.c  opengl.c  opengl.h  opengl.py  script.py  shader.c  shader.h  show.py  toon.c  toon.h  utils.py
src/Show.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
